# Difference-Calculator

./: Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: gendiff-check.yml  gendiff.yml
difference_calculator/scripts/: gendiff.py
gendiff/: __init__.py  cli.py  diff_generator.py  file11.yaml  file22.yaml  parsers.py  testy.py
gendiff/diff_files/: diff_json.py  difference_tree.py  gener_diff.py
gendiff/diff_files/formats/: json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_diff_json.py  test_gendiff.py
tests/fixtures/: file1.json  file2.json  file_diff.json  file_nested.json  flat_json.txt  nested.txt  plain.txt  result_json
